<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_textView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_below="@+id/name_textView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        android:id="@+id/tel_textView"
        android:layout_below="@+id/name_editText"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Emergency contact number" />

    <EditText
        android:id="@+id/tel_editText"
        android:layout_below="@+id/tel_textView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="" />

    <TextView
        android:id="@+id/birth_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tel_editText"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="Date of Birth" />

    <Button
        android:id="@+id/birth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birth_textView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:text="Select Date of Birth" />

    <TextView
        android:id="@+id/dateOfBirth_textView"
        android:textSize="18sp"
        android:layout_toRightOf="@id/birth_button"
        android:layout_below="@id/birth_textView"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/select_disease_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateOfBirth_textView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="Select the chronic disease" />

    <Spinner
        android:id="@+id/select_disease_spinner"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/select_disease_textView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_below="@+id/select_disease_spinner"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="submit" />

</RelativeLayout>